[gd_scene load_steps=25 format=3 uid="uid://dqc6ctauqb6bo"]

[ext_resource type="Script" path="res://slime.gd" id="1_4u1vd"]
[ext_resource type="Texture2D" uid="uid://bro5onfqias0i" path="res://Resources/Monsters/slime.png" id="1_k13bn"]
[ext_resource type="SpriteFrames" uid="uid://d0o2tw10umvgr" path="res://Battle/Animations/Slime/slime.tres" id="3_43jub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsrnx"]
size = Vector2(12, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj3vx"]
atlas = ExtResource("1_k13bn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k8be"]
atlas = ExtResource("1_k13bn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5c8o"]
atlas = ExtResource("1_k13bn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrcgd"]
atlas = ExtResource("1_k13bn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yckq5"]
atlas = ExtResource("1_k13bn")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c0yp"]
atlas = ExtResource("1_k13bn")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_11ehi"]
atlas = ExtResource("1_k13bn")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm5hs"]
atlas = ExtResource("1_k13bn")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2810h"]
atlas = ExtResource("1_k13bn")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am4ey"]
atlas = ExtResource("1_k13bn")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d835o"]
atlas = ExtResource("1_k13bn")
region = Rect2(192, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6tlt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj3vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k8be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5c8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrcgd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yckq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c0yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11ehi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm5hs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2810h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am4ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d835o")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_nrf8k"]
radius = 57.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mixn"]
size = Vector2(12, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_3fbey"]
radius = 63.2851

[sub_resource type="Animation" id="Animation_bgaub"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MonsterSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_gk4ke"]
resource_name = "slime_chase"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0.9, 0.9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MonsterSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_yiho7"]
resource_name = "slime_death"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_3gftw"]
resource_name = "slime_idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1), Vector2(0.95, 0.95)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sfl3n"]
_data = {
"RESET": SubResource("Animation_bgaub"),
"slime_chase": SubResource("Animation_gk4ke"),
"slime_death": SubResource("Animation_yiho7"),
"slime_idle": SubResource("Animation_3gftw")
}

[node name="Slime" type="CharacterBody2D"]
z_index = 2
y_sort_enabled = true
collision_layer = 8
collision_mask = 20
script = ExtResource("1_4u1vd")

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_xsrnx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_s6tlt")
animation = &"Idle"
frame_progress = 0.251744
offset = Vector2(0, -8)

[node name="ChaseRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseRadius"]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_nrf8k")
debug_color = Color(0.866667, 0.32549, 0.360784, 0.419608)

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_1mixn")
debug_color = Color(0.592157, 0.529412, 0.403922, 0.419608)

[node name="AssistRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AssistRadius"]
visible = false
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_3fbey")

[node name="MonsterSprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.803922)
sprite_frames = ExtResource("3_43jub")
animation = &"idle"
offset = Vector2(0, -5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sfl3n")
}

[connection signal="body_entered" from="ChaseRadius" to="." method="_on_chase_radius_body_entered"]
[connection signal="body_exited" from="ChaseRadius" to="." method="_on_chase_radius_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
